# kw_5

./: README.md  pyproject.toml
src/: .env  data_to_be_process.py  db.sql  db_manager.py  main.py  parser.py  query.py
tests/: tests.py
